# chart-ext

./: AGENTS.md  Cargo.toml
.github/workflows/: pr.yaml  release.yml  test.yml
src/: collection.rs  ext_type.rs  lib.rs  metadata.rs  openapi.rs  ui_schema.rs  values_ui.rs  versions.rs
src/actions/: mod.rs  v0.rs  v1beta1.rs
src/features/: mod.rs  v0.rs  v1beta1.rs  v1beta2.rs
src/resource_types/: mod.rs  v1beta1.rs
tests/: fake_db.rs  openapi.rs  utils.rs  v0_values_collection.rs  v0_values_hidden_required_input.rs  v0_values_plain.rs  v1beta1_values_bad.rs  v1beta1_values_plain.rs  v1beta2_values_bad.rs  v1beta2_values_good.rs
tests/charts/v1beta2/chart1/: Chart.yaml
tests/charts/v1beta2/chart3/: Chart.yaml
tests/charts/v1beta2/chart5/platz/: values-ui.yaml
tests/charts/v1beta2/chart6/platz/: values-ui.yaml
