[package]
description = "Platz Helm chart extensions"
edition = "2021"
license = "Apache-2.0"
name = "platz-chart-ext"
repository = "https://github.com/platzio/chart-ext"
version = "0.5.13"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
jsonlogic-rs = "0.3.2"
reqwest = {version = "0.11.24", default-features = false, features = ["rustls-tls", "json"]}
rust_decimal = {version = "1.34.3", default-features = false, features = ["serde"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_yaml = "0.9.32"
strum = {version = "0.26", features = ["derive"]}
thiserror = "1.0.57"
tokio = {version = "1", features = ["fs", "macros"]}
url = {version = "2.5.0", features = ["serde"]}
utoipa = {optional = true, version = "4", features = ["chrono", "decimal", "uuid"]}
uuid = {version = "1", features = ["v4"]}

[dev-dependencies]
anyhow = "1"
tokio = {version = "1", features = ["rt-multi-thread"]}
