[package]
description = "Platz Helm chart extensions"
edition = "2021"
license = "Apache-2.0"
name = "platz-chart-ext"
repository = "https://github.com/platzio/chart-ext"
version = "0.6.1"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
anyhow = "1.0.95"
jsonlogic-rs = "0.5.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rust_decimal = { version = "1.36.0", default-features = false, features = [
    "serde",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["fs", "macros"] }
url = { version = "2.5.4", features = ["serde"] }
utoipa = { optional = true, version = "5", features = [
    "chrono",
    "decimal",
    "uuid",
] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
