[package]
description = "Platz Helm chart extensions"
edition = "2021"
license = "Apache-2.0"
name = "platz-chart-ext"
repository = "https://github.com/platzio/chart-ext"
version = "0.7.0"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
anyhow = "1.0.102"
juspay_jsonlogic = "0.5.5"
reqwest = { version = "0.13.3", default-features = false, features = [
    "rustls",
    "json",
] }
rust_decimal = { version = "1.42.0", default-features = false, features = [
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["fs", "macros"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { optional = true, version = "5", features = [
    "chrono",
    "decimal",
    "url",
    "uuid",
] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
